# go-learn

./: .gitignore  404.html  README.md  index.html  sitemap.xml
advanced/cli/: index.html
advanced/pointers/: index.html
css/: extra.css
datetime/: index.html
docs/: README.md  mkdocs.yml  pyproject.toml
docs/docs/: datetime.md  docstring.md  for-loops.md  if-blocks.md  index.md  naming_conventions.md  strings.md  types.md  union-any.md  variables.md
docs/docs/advanced/: cli.md  pointers.md
docs/docs/files/: encoders.md  files.md  html_templates.md  json_load_dump.md
docs/docs/numbers/: limits.md
docs/docs/pythonic/: any-dict-list.md  data-types.md  decorators.md  kwargs.md  operators.md  strings.md
docs/overrides/: main.html
docs/overrides/plugins/: index.js
docs/overrides/plugins/prism/: __README__.md  index.js  style.css
docstring/: index.html
examples/app_hello/: set_defaults.go
examples/blueprint/: main.go
examples/cli_app/: main.go
examples/web_echo/: go.mod  main.go
examples/web_gin/: main.go
files/encoders/: index.html
files/files/: index.html
files/html_templates/: index.html
files/json_load_dump/: index.html
for-loops/: index.html
if-blocks/: index.html
naming_conventions/: index.html
numbers/limits/: index.html
plugins/: index.js
python_scripts/: schema.toml  types_schema.py
pythonic/any-dict-list/: index.html
pythonic/data-types/: index.html
pythonic/decorators/: index.html
search/: search_index.json
strings/: index.html
types/: index.html
union-any/: index.html
variables/: index.html
(+5 files in other folders)
